--- a/css/style.css
+++ b/css/style.css
@@ -1,94 +1,109 @@
-*{
-  text-align: center;
+* {
+  text-align : center;
 }
 
 .wrap {
-  display: flex;
+  display : flex;
 }
 
-#wrapper,#basket{
+#wrapper,#basket {
   width : 600px;
   height : 700px;
-  display: flex;
-  flex-wrap: wrap;
+  display : flex;
+  flex-wrap : wrap;
 }
-#basket{
-  background-color: rgb(255, 200, 200);
-  /* position: absolute; */
-  margin-top: 3px;
-  margin-left: 100px;
-  height: 900px;
-  overflow: scroll;
+
+#basket {
+  background-color : #191919;
+  margin-top : 3px;
+  margin-left : 100px;
+  height : 900px;
+  overflow : scroll;
 }
-#wrapper div{
+
+#wrapper {
+  padding-bottom : 23px;
+  background-color : #6d6d6c;
+}
+
+#wrapper div {
   border : 0px;
   margin : 0px;
   padding : 0px;
   margin : 0.5%;
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  justify-content: center;
+  display : flex;
+  flex-flow : row wrap;
+  align-items : center;
+  justify-content : center;
 }
-#title{
+
+#title {
   width : 100%;
   height : 25%;
-  background-color: rgb(204, 255, 241);
+  background-color : #D2D2D1;
 }
-div[id*="items"], #insert, #return, #coin{
-  background-color: rgb(244, 255, 200);
+
+div[id*="items"], #insert, #return, #coin {
+  background-color : #3C4E5E;
   margin : 0.5%;
   width : 24%;
   height : 25%;
 }
+
 #selected {
   width : 100%;
   height : 25%;
   margin : 0.5%;
-  background-color: rgb(200, 245, 255);
+  background-color : #191919;
 }
-div[id*="items"] > img{
+
+div[id*="items"] > img {
   margin-left : 100px;
   margin-right : 100px;
 }
-/* div[id*="items"] > input{
-  font-size : 20px;
-} */
+
 #items > input {
-  font-size: 20px;
-  margin-bottom: 0px;
+  font-size : 20px;
 }
-input{
-  border-radius: 10px;
-  border : 2px solid rgb(255, 176, 136);
+
+input {
+  border-radius : 10px;
+  border : 2px solid #fff;
   width : 80%;
 }
-#returnButton{
+
+#returnButton {
   height : 40%;
 }
-#total{
-  height :50px;
-  font-size: 30px;
-  background-color:inherit;
+
+#total {
+  height : 50px;
+  font-size : 30px;
+  background-color : #fff;
 }
-.coindata{
+
+.coindata {
   width : 40%;
   height : 20%;
 }
-#confirm{
-  height :40%;
+
+#confirm {
+  height : 40%;
 }
-#basketTitle{
+
+#basketTitle {
   width : 100%;
   height : 20px;
 }
-#basketTitle input{
-  font-size: 40px;
-  border-radius: 10px;
-  border : 2px solid rgb(255, 176, 136);
-  background-color: inherit;
+
+#basketTitle input {
+  font-size : 40px;
+  border-radius : 0px;
+  border : 2px solid #f0f0f0;
+  background-color : #fff;
 }
-#basketItems{
+
+#basketItems {
   width : 100%;
   height : 80%;
 }
